# ShaderBuilder-pure

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/app/: Cargo.toml  tauri.conf.json
crates/app/capabilities/: default.json
crates/app/icons/: icon.icns
crates/app/resources/: example-project.json
crates/app/src/: export.rs  graph.rs  import.rs  lib.rs  library.rs  main.rs  preview.rs  project.rs  scan.rs  session.rs
crates/codegen-glslp/: Cargo.toml
crates/codegen-glslp/src/: lib.rs
crates/codegen-slang/: Cargo.toml
crates/codegen-slang/src/: emit.rs  lib.rs  whole_pass.rs
crates/codegen-slang/tests/: emit_compile.rs
crates/codegen-slang/tests/snapshots/: builtins.slang  custom_snippet.slang  int_scalar_arithmetic.slang  multi_sampler.slang  original_history_zero_alias.slang  param_mix_tint.slang  passthrough_brightness.slang  scalar_to_output_broadcast.slang  two_snippets_like_named_locals.slang
crates/core-model/: Cargo.toml  README.md
crates/core-model/src/: engine.rs  inspect.rs  ir.rs  lib.rs  library.rs  session.rs
crates/ir/: Cargo.toml
crates/ir/src/: lib.rs  lower.rs  typecheck.rs
crates/ir/tests/: connection_parity.rs  lower.rs  typecheck.rs
crates/preset-io/: Cargo.toml
crates/preset-io/src/: export.rs  import.rs  lib.rs  params.rs  scan.rs  slangp.rs  validate.rs
crates/preview-engine/: Cargo.toml
crates/preview-engine/src/: bindtable.rs  frame.rs  lib.rs  pass.rs  render_source.rs  renderer.rs  uniforms.rs  viewport.rs
crates/preview-engine/tests/: combined_sampler.rs  e2e_curvature.rs
crates/preview-engine/tests/fixtures/: curvature.slang  passthrough.slang
crates/slang-compile/: Cargo.toml
crates/slang-compile/src/: cache.rs  glslang.rs  lib.rs  preprocess.rs  push_to_ubo.rs  reflect.rs  spirv_opt.rs  split_samplers.rs
crates/source/: Cargo.toml
crates/source/src/: lib.rs  pump.rs
crates/testing/: Cargo.toml
crates/testing/examples/: gen_reference_source.rs  gen_retroarch_bundle.rs
crates/testing/fixtures/: README.md
crates/testing/fixtures/example/: crt-scanlines-curvature.slangp  curvature.slang  scanlines.slang
crates/testing/fixtures/feedback/: accumulate.slang  feedback.slangp
crates/testing/fixtures/graph_parity/: blur.slang  builtin_framecount.slang  clamp_band.slang  color_invert.slang  construct_vec4.slang  div_scale.slang  mix_blend.slang  param_contrast.slang  snippet_channel_swap.slang  swizzle_bgra.slang  uv_warp.slang
crates/testing/fixtures/lut/: lookup.slang  lut.slangp
crates/testing/fixtures/multipass/: blend.slang  invert.slang  multipass.slangp
crates/testing/fixtures/orphan_override/: orphan.slang  orphan.slangp
crates/testing/fixtures/params/: grade.slang  params.slangp
crates/testing/fixtures/retroarch_export/: README.md  preset.slangp
crates/testing/fixtures/roundtrip/: kitchen_sink.slangp  pass0_source_scale.slang  pass1_per_axis_scale.slang  pass2_feedback.slang  pass3_viewport.slang
crates/testing/references/retroarch/: crt-geom.toml  feedback.toml  ntsc-256px-svideo-scanline.toml  scanline.toml
crates/testing/src/: diff.rs  fuzz.rs  graph_render.rs  lib.rs  render.rs  roundtrip.rs
crates/testing/tests/: corpus_fuzz.rs  example_project.rs  fuzz_fixtures.rs  golden.rs  graph_parity.rs  import_params_luts.rs  license_cleanliness.rs  references.rs  retroarch_export.rs  roundtrip_corpus.rs  roundtrip_fixtures.rs
docs/: example-project.md  golden-image-harness.md  import-walkthrough.md  release-checklist.md  retroarch-slang-runtime.md  user-guide.md
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.css  App.tsx  index.css  main.tsx  model.ts
web/src/bindings/: AliasBinding.ts  BoundaryPort.ts  BuiltinSemantic.ts  CompileGraphResult.ts  ConstValue.ts  Diagnostic.ts  DiagnosticSeverity.ts  Diagnostics.ts  Edge.ts  EngineErrorEvent.ts  EngineEvent.ts  EngineSeverity.ts  EngineStatus.ts  ExportBlocker.ts  ExportError.ts  ExportResult.ts  ExportValidation.ts  ExprOp.ts  Graph.ts  IrEdge.ts  IrGraph.ts  IrNode.ts  LibraryError.ts  LibraryItem.ts  LibraryPayload.ts  LibraryRef.ts  Lut.ts  Node.ts  NodeOp.ts  Parameter.ts  Pass.ts  PassAvailability.ts  PassSettings.ts  PassSource.ts  PipelineMetadata.ts  PixelFormat.ts  PixelSample.ts  PortDecl.ts  PortDirection.ts  PortRef.ts  (+18 more)
web/src/codeview/: GeneratedCodePanel.test.tsx  GeneratedCodePanel.tsx  highlightSlang.test.ts  highlightSlang.ts
web/src/compile/: ProblemsPanel.test.tsx  ProblemsPanel.tsx  compileLoop.test.ts  compileLoop.ts  exportProject.test.ts  exportProject.ts  exportSubstitution.test.ts  exportSubstitution.ts  previewDispatch.test.ts  previewDispatch.ts  useCompileLoop.test.tsx  useCompileLoop.ts
web/src/editor/: EditorCanvas.tsx  EditorStatusBar.test.tsx  EditorStatusBar.tsx  EditorToolbar.test.tsx  EditorToolbar.tsx  NodePaletteMenu.tsx  graphAdapter.test.ts  graphAdapter.ts  nodeMeasureCache.test.ts  nodeMeasureCache.ts  selectionChanges.test.ts  selectionChanges.ts  useEditorShortcuts.ts
web/src/export/: ExportDialog.test.tsx  ExportDialog.tsx  exportApi.ts  exportGate.test.ts  exportGate.ts  exportStore.test.ts  exportStore.ts
web/src/feedback/: ErrorBoundary.test.tsx  ErrorBoundary.tsx  Toasts.tsx  toastStore.test.ts  toastStore.ts  useEngineEvents.test.tsx  useEngineEvents.ts
web/src/help/: HelpButton.tsx  HelpDialog.test.tsx  HelpDialog.tsx  shortcuts.ts
web/src/inspector/: InspectorFields.test.tsx  InspectorFields.tsx  InspectorPanel.test.tsx  InspectorPanel.tsx  NodeInspector.tsx  PortEditor.test.tsx  PortEditor.tsx  useNodeDataEditor.ts
web/src/nodes/: TaxonomyNode.test.tsx  TaxonomyNode.tsx  data.ts  graphToIr.test.ts  graphToIr.ts  index.ts  nodeTypes.ts  portTypeChecking.test.ts  portTypeChecking.ts  registry.test.ts  registry.ts  subgraph.test.ts  subgraph.ts  types.ts
web/src/onboarding/: StartScreen.test.tsx  StartScreen.tsx  api.ts  onboardingStore.ts  startActions.test.ts  startActions.ts  useRecents.ts
(+100 files in other folders)
