[package]
name = "codegen-slang"
description = "IR → slang emitter + slang preprocessing (Architecture §B/§C). Primary, always-previewed backend."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
ir = { workspace = true }
