[package]
name = "core-model"
description = "Project/Graph/IR types, serde, and TypeScript-type export — the one shared serialization contract (Architecture §A/§B)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
