[package]
name = "core-model"
description = "Project/Graph/IR types, serde, and TypeScript-type export — the one shared serialization contract (Architecture §A/§B)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true
readme = "README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ts-rs = { workspace = true }

[dev-dependencies]
# Throwaway dirs for the library-store pure-fn tests (#58).
tempfile = { workspace = true }
