[package]
name = "preset-io"
description = ".slangp/.slang import parser + export bundle writer (Architecture §B; Implementation Plan Phase 3)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
core-model = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
