[package]
name = "preview-engine"
description = "wgpu device, pass resource graph, feedback/history, render thread, builtin-uniform computation — the faithful RetroArch slang runtime (Architecture §B/§D)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
slang-compile = { workspace = true }
source = { workspace = true }
wgpu = { version = "29", features = ["spirv"] }
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"

# The end-to-end exit test (`tests/e2e_curvature.rs`) loads a committed PNG
# source fixture and writes the rendered curvature snapshot back out as PNG.
[dev-dependencies]
image = { workspace = true }
