[package]
name = "slang-compile"
description = "slang preprocess → glslang → SPIR-V, with a content-hash shader cache (Architecture §B/§D)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
core-model = { workspace = true }
