[package]
name = "source"
description = "Frame pump: still images, built-in test patterns, PNG sequences (optional ffmpeg) feeding the preview (Architecture §B/§D)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
core-model = { workspace = true }
