[package]
name = "testing"
description = "Golden-image regression harness (#32): headless render-preset-to-PNG, image diff, and a corpus fuzzer that import-and-renders a directory of `.slangp` presets. The fidelity gate's *machinery* — see docs/golden-image-harness.md for the (manual) RetroArch-reference capture that closes the Phase-2 fidelity exit gate."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

# The harness is a normal library (not just dev-only): a future `cargo run`
# baseline tool or other crates may call `render_preset_to_image` / `diff_images`.
# Its dependencies are therefore normal deps; `image` is needed at the API
# surface (`RgbaImage` is in the public signatures).
[dependencies]
preview-engine = { workspace = true }
preset-io = { workspace = true }
slang-compile = { workspace = true }
source = { workspace = true }
image = { workspace = true }

[dev-dependencies]
# `tempfile` backs the fuzzer's directory-walk unit tests.
tempfile = { workspace = true }
# `core-model` is used by the #35 import test to assert the project model
# (parameters + LUT sampler settings) the importer produces.
core-model = { workspace = true }
